app/http/admin/deploy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: admin-gateway
spec:
  gatewayClassName: example-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: admin-route
spec:
  parentRefs:
    - name: admin-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: admin-svc
          port: 80
